# advent-of-code

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json  tsconfig.json
2019/day1/: sol.py
2019/day2/: day2.mjs
2019/day3/: solP1.py  solP2.py
2019/day4/: day4P1.py  day4P2.py
2019/day5/: err.txt  part1.mjs  part1.py  part2.py
2019/day6/: day6Pt1.py  day6Pt2.py  err.txt
2019/day7/: day7PT1.py  day7PT2.py  err.txt
2019/day8/: day8PT1.py  day8PT2.py  day8part2.ipynb
2020/day1/: day.rs  part1.go  part1.py  part2.go  part2.py
2020/day2/: day2.rs  part1.py  part2.py
2020/day3/: day3.rs  part1.py  part2.py
2021/day1/: day1.go
2021/day2/: day2.go
2021/day3/: day3.go
2021/day4/: day4.go
2021/day5/: day5.go
2021/day6/: day6.go
2021/day7/: day7.go
2022/day1/: day1Bun.ts  day1Type.ts
2022/day2/: day2Bun.ts
2022/day3/: day3Bun.ts
2022/day4/: day4Bun.ts
2022/day5/: day5.ts
2022/day6/: day6Bun.ts
2022/day7/: day7Bun.ts
2022/day8/: day8Bun.ts  part1ChatGpt.ts  part2.ts
2022/helpers/: comparator.ts  sum.ts
2023/day1/: day1.rs
2023/day2/: day2.rs
2023/day3/: day3.rs
